--- a/D7-exercise/CUDA/CUDA_Heat/makefile
+++ b/D7-exercise/CUDA/CUDA_Heat/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 NVCC = nvcc
 LIBS = -lm
-CFLAGS = 
+CFLAGS = -O3
 SRC = Heat_equation_serial.cu parallel_function.cu
 OBJS = ${SRC:.cu=.o}
 EXEC = Heat_equation_serial.x
